[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "activault"
version = "0.1.0"
description = "A pipeline for generating and processing model activations"
readme = "README.md"
requires-python = ">=3.9, <3.12"
license = {text = "Apache 2.0"}
authors = [
    {name = "Mason Wang", email = "mason@tilderesearch.com"},
    {name = "Dhruv Pai", email = "dhruv@tilderesearch.com"},
    {name = "Ben Keigwin", email = "ben@tilderesearch.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "accelerate>=1.0.1",
    "aiohttp>=3.10.11",
    "black>=25.1.0",
    "boto3>=1.37.13",
    "datasets>=3.1.0",
    "flash-attn>=2.7.0.post2",
    "huggingface-hub>=0.29.3",
    "matplotlib>=3.9.4",
    "ray>=2.43.0",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "setuptools>=75.3.2",
    "torch>=2.4.1",
    "transformers==4.49.0",
    "wheel>=0.45.1",
    "xformers>=0.0.28.post1",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
]

ray = [
    "ray>=2.9.0",
]

[tool.setuptools]
packages = ["pipeline", "configs", "s3",]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers", rev = "v4.49.0-Gemma-3" }

[project.scripts]
activault = "pipeline.utils.cli:main"
